-bug#0001557: Quotes in Text Format graph template field breaks graph
-bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems
-bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
-bug#0001609: Script server timeout too aggressive with 10 second poller interval
-bug#0001628: Message does not match available buttons in Change SNMP Options
-bug: When creating new graphs without a data source, print error to user instead of throwing php error
-bug: Browser query string does not contain arguments
-bug: inject_form_variables does not operate if more than 1 variable needs replacing
-bug: Script imposed memory limits cause issues with some scripts
-bug: Turn off process leveling if there are not enough poller items to substantiate it

0.8.7e

-bug#0001044: Creating a DS, Output field can't be selected for DT with a DIM when "Use Per-Data Source Value" is on
-bug#0001341: SNMP query: add oid_suffix for weird SNMP queries 
-bug#0001345: Overwriting $snmp_index in query_snmp_host() breaks SNMP Data query if using get method
-bug#0001346: Strip out noisy 'No Such Instance currently exists at this OID' 
-bug#0001404: timeout in "function ping_icmp" (lib/ping.php)
-bug#0001405: Spaces in DS when .rrd file is created, so it fails
-bug#0001407: Place graph thumbnail into div to lower page length changes on load graphs
-bug#0001410: Thumbnail Columns is not honored for host display with snmp index group style
-bug#0001411: Graph searching issue
-bug#0001413: strip_quotes fails 
-bug#0001426: multiple form opening due to bug in draw_edit_form() 
-bug#0001436: CSV Export Start Date and End Date are always 1970-01-01 01:00:00 
-bug#0001443: format_snmp_string can return a number with a leading space 
-bug#0001446: Wrong dates override in CSV export 
-bug#0001456: oid_uptime is not parsed correctly 
-bug#0001460: Skiping input parameters in data_query_field_list() may lead to SQL errors
-bug#0001464: Typo in install/index.php 