@@ -309,7 +309,8 @@ function adodb_date_test_date($y1,$m)
 function adodb_date_test()
 {
 	
-	error_reporting(E_ALL);
+	#error_reporting(E_ALL);
+	error_reporting(E_ALL ^ E_DEPRECATED);
 	print "<h4>Testing adodb_date and adodb_mktime. version=".ADODB_DATE_VERSION. "</h4>";
 	@set_time_limit(0);
 	$fail = false;
