@@ -23,11 +23,14 @@ SVN
 -bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
 -bug#0001609: Script server timeout too aggressive with 10 second poller interval
 -bug#0001628: Message does not match available buttons in Change SNMP Options
+-bug#0001695: suppress deprecated warnings in Cacti code 
 -bug: When creating new graphs without a data source, print error to user instead of throwing php error
 -bug: Browser query string does not contain arguments
 -bug: inject_form_variables does not operate if more than 1 variable needs replacing
 -bug: Script imposed memory limits cause issues with some scripts
 -bug: Turn off process leveling if there are not enough poller items to substantiate it
+-feature: Add logging to SQL Save error handling
+
 
 0.8.7e
 
